tests/grammar/snapshots/r#mod__grammar__alpha034__whitespace-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"  0\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Number(
                            (
                                0.0,
                                2..3,
                            ),
                        ),
                        2..3,
                    ),
                ),
                2..3,
            ),
        ],
    ),
    2..3,
)
