tests/grammar/snapshots/r#mod__grammar__alpha034__whitespace.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\" 0\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Number(
                            (
                                0.0,
                                1..2,
                            ),
                        ),
                        1..2,
                    ),
                ),
                1..2,
            ),
        ],
    ),
    1..2,
)
